--- a/js Basic/what is js/index.html
+++ b/js Basic/what is js/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
 
-	<p>Player 1: Sazzad</p>
+	<p>Player <span>1</span>: Sazzad</p>
+
+<br/>
+
+	<button>Click Me.</button>
 
 	<script type="text/javascript" src="index.js"></script>
 
