--- a/js Basic/5 math/math.html
+++ b/js Basic/5 math/math.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Canvas API</title>
 </head>
 <body>
-$END$
+
+<!--    <canvas id="canvas"></canvas>-->
+
+    <div>
+        <button>Start Machine</button>
+        <p>The Machine is stop</p>
+    </div>
+
+
+    <script src="math.js"></script>
 </body>
 </html>
